2009-01-04  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaInitXAA), (viaInitAccel):
	* src/via_crtc.c: (ViaSecondCRTCSetStartingAddress):
	* src/via_cursor.c: (viaHWCursorInit), (viaCursorSetFB),
	(viaCursorStore), (viaCursorRestore), (viaShowCursor),
	(viaHideCursor), (viaSetCursorPosition), (viaUseHWCursorARGB),
	(viaUseHWCursor), (viaLoadCursorImage), (viaSetCursorColors),
	(viaLoadCursorARGB):
	* src/via_dga.c: (VIADGASetMode):
	* src/via_driver.c: (VIAFreeRec), (VIASetupDefaultOptions),
	(VIAPreInit), (VIAEnterVT), (VIALeaveVT), (VIAScreenInit),
	(VIACloseScreen):
	* src/via_driver.h:
	* src/via_regs.h:

	This is a take at reworking HWCursor.  It works off the
	ttm_branch and the work done in the randr_branch.  It only needs
	marginal testing as HWCursor was already very broken.

2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_driver.c: (VIAMapMMIO), (VIAMapFB):

	Moved pVia->FrameBufferBase setting to within
	VIAMapFB where it was before being called without
	being set.

2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_driver.c: (VIAPreInit):

	Patch submitted by Robert Bridge to clean up compiler
        warnings.  Should close trac ticket #243.  Thanks
	RobbieAB.

2008-12-29  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaInitXAA):
	* src/via_driver.c: (VIAMapMMIO), (VIAMapFB):

	Finally tracked down the XAA libpciaccess bug.  Also
	Realized I had not enabled write-combining on the main
	framebuffer.  This should give a small speed boost.

2008-12-26  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_mode.h:

	Added support for all Modes in ViaPanelNativeModes to
	ViaPanelModes.  Modes used are from Via's released driver
	in ViaSupportModes.

2008-11-04  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_crtc.c: (ViaFirstCRTCSetMode), (ViaSecondCRTCSetMode):

	Found needed register writes that are needed so VX800 doesn't
	crash when CRT is not enabled.  I also removed NEEDS FIXING